@@ -1,4 +1,9 @@
 File "t07bad.ml", line 10, characters 15-51:
 10 | module rec A : sig type 'a t = <m: 'a list A.t> end
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: In the definition of A.t, type 'a list A.t should be 'a A.t
+Error: This recursive type is not regular.
+       The type constructor A.t is defined as
+         type 'a A.t
+       but it is used as
+         'a list A.t.
+       All uses need to match the definition for the recursive type to be regular.
