@@ -1,4 +1,11 @@
 File "t08bad.ml", line 10, characters 15-68:
 10 | module rec A : sig type 'a t = <m: 'a list B.t; n: 'a array B.t> end
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: In the definition of B.t, type 'a array A.t should be 'a A.t
+Error: This recursive type is not regular.
+       The type constructor A.t is defined as
+         type 'a A.t
+       but it is used as
+         'a array A.t
+       after the following expansion(s):
+         'a array B.t = 'a array A.t
+       All uses need to match the definition for the recursive type to be regular.
