@@ -1,4 +1,9 @@
 File "t11bad.ml", line 12, characters 15-52:
 12 |        and B : sig type 'a t = <m: 'a array B.t> end
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: In the definition of B.t, type 'a array B.t should be 'a B.t
+Error: This recursive type is not regular.
+       The type constructor B.t is defined as
+         type 'a B.t
+       but it is used as
+         'a array B.t.
+       All uses need to match the definition for the recursive type to be regular.
