@@ -4,4 +4,9 @@ File "t12bad.ml", lines 11-15, characters 4-7:
 13 |         method map : ('a -> 'b) -> 'b M.c
 14 |       end
 15 |     end
-Error: In the definition of M.c, type 'b M.c should be 'a M.c
+Error: This recursive type is not regular.
+       The type constructor M.c is defined as
+         type 'a M.c
+       but it is used as
+         'b M.c.
+       All uses need to match the definition for the recursive type to be regular.
